# cpa-network

./: .dockerfileignore  .env.dist  .flake8  .gitignore  Makefile  Procfile  Procfile.dev  README.md  app.json  docker-compose.yml  mypy.ini  permissions.txt  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: django.yml
affiliate/: apps.py  dao.py  filters.py  models.py  serializers.py  todo  urls.py
affiliate/sql/: daily_report.sql  goal_report.sql  offer_report.sql  sub_report.sql
affiliate/tests/: test_conversion.py  test_offer.py  test_stats.py
affiliate/views/: conversions.py  offers.py  profile.py  register.py  stats.py
affiliate_ui/: apps.py  tests.py  urls.py  views.py
affiliate_ui/tests/: test_config.py  test_daily_report_view.py  test_dashboard.py  test_goal_report_view.py  test_login.py  test_offer_report_view.py  test_offers.py
affiliate_ui/views/: report_views.py
api/: urls.py
api/tests/: test_advertiser.py  test_conversion.py  test_landing.py  test_offer.py  test_offer_traffic_source.py  test_payout.py
api/views/: advertiser.py  conversions.py  landing.py  offer.py  offer_traffic_source.py  payout.py
dictionaries/: urls.py
dictionaries/views/: categories.py  countries.py
docker/: Dockerfile  Dockerfile.dev  wait-for-postgres.sh
docs/: index.html  schema.yml
ext/ipapi/: __init__.py  api.py
ext/ipstack/: api.py
network/: dao.py  urls.py
network/sql/: affiliate_report.sql  daily_report.sql  offer_report.sql
network/tests/: test_affiliate.py  test_conversion.py  test_offer.py  test_stats.py
network/views/: affiliates.py  conversions.py  offers.py  stats.py
offer/: admin.py  models.py
offer/migrations/: 0001_initial.py  0002_offer_countries.py  0003_offer_description.py  0004_auto_20191009_1712.py  0005_category.py  0006_trafficsource.py  0007_offer_categories.py  0008_auto_20200618_1647.py  0009_auto_20200618_1706.py  0010_currency.py  0011_payout.py  0012_auto_20200618_1922.py  0013_offer_preview_link.py  0014_advertiser.py  0015_offer_advertiser.py  0016_auto_20200629_2215.py  0017_offer_icon.py  0018_auto_20200726_1815.py  (+3 more)
postback/: admin.py  apps.py  models.py
project/: _celery.py  redis_conn.py  urls.py
tracker/: admin.py  apps.py  dao.py  models.py  signals.py  urls.py  views.py
user_profile/: admin.py  apps.py  models.py  signals.py
(+47 files in other folders)
