[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["AsL <bloogrox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
celery = "5.5.3"
"dj-database-url" = "3.0.1"
Django = "~5.2.0"
"django-cors-headers" = "4.7.0"
"django-countries-plus" = "2.2.0"
"django-filter" = "25.1"
"django-tinymce" = "4.1.0"
djangorestframework = "3.16.1"
"djangorestframework-simplejwt" = "5.5.1"
"drf-spectacular" = "0.28.0"
gunicorn = "23.0.0"
honcho = "1.1.0"
"psycopg2-binary" = "2.9.10"
redis = "6.4.0"
requests = ">=2.32"
whitenoise = "6.9.0"
iso8601 = "^2.1.0"
webargs = "^8.7.0"
pytz = "^2025.2"


[tool.poetry.group.dev.dependencies]
"django-stubs" = "1.13.0"
"djangorestframework-stubs" = "1.8.0"
mypy = "0.991"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = ["venv", ".git", "__pycache__", "migrations"]
line-length = 79
select = [
    "E",   # pycodestyle rules
    "F",   # Pyflakes rules
    "C90", # McCabe complexity
]

[tool.ruff.mccabe]
max-complexity = 10
